# librs

./: .gitignore  CONVENTIONS.md  Cargo.toml  rustfmt.toml
source/: lib.rs
source/linux/: mod.rs  types.rs
source/linux/io/: fd.rs  flags.rs  mod.rs  mode.rs
source/linux/syscall/: argument.rs  failure.rs  mod.rs  pointer.rs  success.rs  wrapper.rs
source/linux/syscall/amd64/: caller.rs  mod.rs
tests/: build.rs
